--- a/plugins/CoreHome/stylesheets/zen-mode.less
+++ b/plugins/CoreHome/stylesheets/zen-mode.less
@@ -7,6 +7,10 @@
     display: none;
   }
 
+  #root #secondNavBar + .pageWrap {
+    width: 100%;
+  }
+
   .bannerHeader {
     display: none;
   }
